--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.6.8",
     "buffer": "6.0.3",
-    "expo": "^49.0.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.0",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "mqtt": "5.5.5",
     "paho-mqtt": "^1.1.0",
     "quito": "^0.1.3",
     "react": "18.2.0",
     "react_native_mqtt": "^1.3.1",
-    "react-native": "0.72.10",
+    "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-date-picker": "^5.0.2",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-modal": "^13.0.1",
     "react-native-paho-mqtt": "^0.1.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "sp-react-native-mqtt": "^0.5.1",
     "toastify-react-native": "^5.0.0",
     "url": "0.11.3"
