--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-date-picker": "^5.0.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.10",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-reanimated": "~3.10.1",
